// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render a NavigationSideMenu with default props 1`] = `
<ContentContainer
  fill={true}
  header={
    <ActionHeader
      className="header"
      onBack={[Function]}
      onClose={null}
      onMaximize={null}
      onMinimize={null}
      onNext={null}
      onPrevious={null}
      title={null}
    />
  }
/>
`;

exports[`Layout should render a NavigationSideMenu with selectedKey 1`] = `
<ContentContainer
  fill={true}
  header={
    <ActionHeader
      className="header"
      onBack={[Function]}
      onClose={null}
      onMaximize={null}
      onMinimize={null}
      onNext={null}
      onPrevious={null}
      title="Test Menu"
    />
  }
>
  <List
    isDivided={false}
  >
    <ListItem
      content={
        <div
          className="list-item"
          id={undefined}
        >
          Test Menu 1
        </div>
      }
      isSelected={false}
      key="test1"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    />
    <ListItem
      content={
        <div
          className="list-item"
          id={undefined}
        >
          Test Menu 2
        </div>
      }
      isSelected={false}
      key="test2"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    />
    <ListItem
      content={
        <div
          className="list-item"
          id={undefined}
        >
          Test Menu 3
        </div>
      }
      isSelected={false}
      key="test3"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    />
    <ListItem
      content={
        <div
          className="list-item"
          id={undefined}
        >
          Test Menu 4
        </div>
      }
      isSelected={false}
      key="test4"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    />
  </List>
</ContentContainer>
`;
